# SAGOAP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SAGOAP.sln
SAGOAP/: CMakeLists.txt  SAGOAP.cpp  SAGOAP.h  SAGOAP.inl  SAGOAP.natvis  SAGOAP.vcxproj  SAGOAP.vcxproj.filters  SAHGOAP.cpp  SAHGOAP.h  SAHGOAP.inl  SAHGOAP_Traits.h
SAGOAPTest/: CMakeLists.txt  SAGOAP.natvis  SAGOAPTest.vcxproj  test.cpp  testSAHGOAP.cpp
SAGOAPTest/TestStateActionSpaces/DiscreteWorld/Actions/: A_Move.cpp  A_Move.h
SAGOAPTest/TestStateActionSpaces/DiscreteWorld/StateComponents/: SC_DiscreteLocation.h
SAGOAPTest/TestStateActionSpaces/SurvivalWorld/Actions/: A_Move.cpp  A_Move.h
SAGOAPTest/TestStateActionSpaces/SurvivalWorld/StateComponents/: SC_DiscreteLocation.cpp  SC_DiscreteLocation.h  SurvivalComponents.cpp  SurvivalComponents.h
SAGOAPTest/x64/Debug/: SAGOAPTest.exe.recipe  SAGOAPTest.vcxproj.FileListAbsolute.txt
SAGOAPTest/x64/Debug/SAGOAPTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  SAGOAPTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
